--- a/springboot-backend/pom.xml
+++ b/springboot-backend/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-backend</name>
 	<description>Demo project for Spring Boot REST APIs</description>
+	<description>Simple Project</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
